# AlphaZero

./: .gitignore  10games_played.npz  AZNetwork.pt  AZNetwork0_trained  CMakeLists.txt  README.md  injectors.py  main.cpp  mcts.py  network.py  notebook.sync.ipynb  notebook.sync.py  playing.py  run.sh  test_libtorch  train.py
data/: Model18
engine/: CMakeLists.txt  bindings.cpp  network.hpp  replay_buffer.hpp  test_libtorch.cpp
engine/game/: CMakeLists.txt  chess.cpp  chess.hpp  connect4.cpp  connect4.hpp  connect4_solver.cpp  connect4_solver.hpp  game.hpp
engine/inference/: CMakeLists.txt  basic_infer.cpp  basic_inferer.hpp  inferer.hpp
engine/mcts/: CMakeLists.txt  mcts.cpp  mcts.hpp  mcts_factory.cpp  mcts_factory.hpp
engine/profiling/: CMakeLists.txt  run_self_play.cpp
engine/utils/: CMakeLists.txt  network.cpp  network.hpp  replay_buffer.cpp  replay_buffer.hpp  trainer.cpp  trainer.hpp
gameplay/: agent.py  play_game.py  play_game_utils.py
games/: __init__.py  connect4.py  game.py
games/cython/: Makefile  __init__.pxd  connect4_cython.pxd  connect4_cython.pyx  game_cython.pxd  game_cython.pyx  setup.py
inference_server/: CMakeLists.txt
mcts/: __init__.py  batch_mcts.py  factory.py
mcts/cython/: Makefile  node.pxd  node.pyx  setup.py
models/: connect4_long.pt_trained  connect4_moderate.pt_trained
python/: AZNetwork  README.md  _paths.py  arena.py  checkpoint_manager.py  evaluate.py  evaluate_baseline.py  evaluate_puzzles.py  injectors.py  main.py  network.py  notebook.sync.ipynb  notebook.sync.py  perfect_engine.py  play_chess.py  playing.py  train.py
python/inference_service/: __init__.py  inference_service.py  inferer.py
python/mcts/: core.py
python/tools/: generate_dataset.py  visualize.py
scripts/: evaluate.sh  evaluate_baseline.sh  run_play.sh  run_terminal_play.sh  run_training.sh  train_long.sh
tests/: CMakeLists.txt  test_chess.cpp  test_common.hpp  test_connect4.cpp  test_mcts.cpp  test_replay_buffer.cpp  test_self_play_rewards.cpp
training/: CMakeLists.txt  bindings.cpp  self_play.cpp  self_play.hpp
